2012-02-16 Borut Razem <borut.razem AT gmail.com>

	* support/sdbinutils/include/opcode/sparc.h,
	  support/sdbinutils/include/aout/sun4.h:
	  added for NetBSD/sparc64 bfd build

2012-02-15 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* src/hc08/main.c (hasExtBitOp),
	  src/hc08/gen.c (genGetAbit, genGetByte, genGetWord, genhc08Code):
	  implemented the GETABIT, GETBYTE, and GETWORD iCodes for HC08

2012-02-15 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* src/z80/gen.c:
	  Cheaper signed comparison when right operand is a literal.
	* support/regression/tests/gcc-torture-execute-pr37924.c:
	  Disable even more of a test for older gcc.

2012-02-15 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* support/regression/tests/gcc-torture-execute-pr37924.c,
	  support/regression/tests/gcc-torture-execute-pr33779-2.c:
	  Disable tests for older gcc.
	* src/SDCCast.c
	  Fix setting of CurrFunc for non-functions.
	* src/z80/main.c,
	  src/z80/gen.h,
	  src/z80/gen.c,
	  src/z80/ralloc2.cc:
	  Fixes for --fomit-frame-pointer, omit frame pointer by default for functions with low register pressure and few stack accesses.

2012-02-15 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* src/SDCCast.c (createWhile, createDo, backPatchLabels): put label
	  nodes above IFX nodes rather than between IFX and condition
	* src/SDCCicode.c (geniCodeIfx, ast2iCode): fixed bug #3429793

2012-02-14 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* src/z80/ralloc2.cc,
	  src/z80/gen.h,
	  src/z80/gen.c:
	  Omit frame pointer for functions with low register pressure and few parameter accesses.

2012-02-14 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* src/z80/gen.c:
	  Fix addition when multiple operands are on the stack and --fomit-frame-pointer is used.

2012-02-14 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* src/z80/peeph-z80.def,
	  src/z80/gen.c,
	  src/z80/ralloc2.cc: